--- a/backend/core/apps/pennies/docs/milp-formulation.tex
+++ b/backend/core/apps/pennies/docs/milp-formulation.tex
@@ -22,7 +22,7 @@
     \item $l \in RL$: set of revolving loans = \{line of credit, ...\}
     \item $j \in INV$: set of investments = \{mutual fund rrsp, gic, ...\}
     \item $e \in E$: set of entities that tax people on income = \{federal, provincial \}
-    \item $b \in B_{e}$: set of tax brackets associated with a given taxing entity = \{federal: \{bracket 1, bracket 2, ...\}, provincial: \{bracket 1, bracket 2, ... \}\}
+    \item $b \in B_e$: set of tax brackets associated with a given taxing entity = \{federal: \{bracket 1, bracket 2, ...\}, provincial: \{bracket 1, bracket 2, ... \}\}
 \end{itemize}
 
 
@@ -32,6 +32,7 @@
     \item $v^{0}_{i}$: starting balance of instrument $i$, $i \in I$
     \item $\alpha$: user risk tolerance fraction $\in$ [0, 1]
     \item $A$: monthly allowance
+    \item $E$: monthly expenses when retired
     \item $a^{min}_{i, t}$: min allocation of instrument $i$ in decision period $t$, $i \in I, t \in T_w$
     \item $t^{f}_{i}$: final decision period of instrument $i$, $i \in I$
     \item ${U}_{l}$: upper bound value of loan $l$, $l \in L$
@@ -40,9 +41,10 @@
     \item $n_{t}$: number of months in payment horizon $t$, $t \in T_w$
     \item $\gamma^{min}$: minimum investment volatility of portfolio
     \item $\gamma^{max}$: maximum investment volatility of portfolio
-    \item $s_{t}$: monthly salary for user during decision period $t$, $t \in T_w \cup T_r$
+    \item $s_{t}$: monthly salary for user during decision period $t$, $t \in T$
     \item $m^{tax}_{e, b}$: marginal tax rate for entity $e$ in tax bracket $b$, $b \in B_e, e \in E$
     \item $s^{cut}_{e, b}$: cutoff salary corresponding to tax for entity $e$ in tax bracket $b$, $b \in B_e, e \in E$
+    \item $m^{ub}_{e, b}$: marginal upperbound value to tax for entity $e$ in tax bracket $b$, $b \in B_e, e \in E$
 \end{itemize}
 
 \subsection{Decision Variables}
@@ -60,21 +62,27 @@
     \item $y^{r_i}_{t}$ investment risk violation during decision period $t$, $t \in T_w$
     \item $y^{r}_{t}$ total risk violation during decision period $t$, $t \in T_w$
     \item $y^{l}_{l, t}$ loan due date violation during decision period $t$, $l \in L, t \in T_w$
+    \item $y^{e}_{t}$ retirement expenses violation during retirement period $t$, $t \in T_r$
     \item $\gamma^{lim}_t$ volatility limit during decision period $t$, $t \in T_w$
-    \item $s^{tax}_{t}$ taxable salary during decision period $t$, $t \in T_w \cup T_r$
-    \item $p^{tax}_{t, e, b}$ amount of payable taxes accrued during decision period $t$ to entity $e$ under income bracket $b$. $t \in T_w \cup T_r, e \in E, b \in B_e$
+    \item $s^{tax}_{t}$ taxable salary during decision period $t$, $t \in T$
+    \item $z_{t, e, b}$: remaining marginal income during decision period $t$ for tax entity $e$ in bracket $b$, $t \in T, e \in E, b \in B_e$
+    \item $z^+_{t, e, b}$: the positive slack of the remaining marginal income during decision period $t$ for tax entity $e$ in bracket $b$, $t \in T, e \in E, b \in B_e$
+    \item $z^-_{t, e, b}$: the negative slack remaining marginal income during decision period $t$ for tax entity $e$ in bracket $b$, $t \in T, e \in E, b \in B_e$
+    \item $p^{tax}_{t, e, b}$ amount of payable taxes accrued during decision period $t$ to entity $e$ under income bracket $b$. $t \in T, e \in E, b \in B_e$
 \end{itemize}
 
 
 \section{Workload Variance Minimization Model}
 \subsection{Objective Function}
-\begin{equation}
+\begin{multline}
     \max \sum_{i \in I} v_{i, t^f}
           + \sum_{i \in I, t \in T} v_{i, t} r_{i, t}
-          - 0.01 c^v \sum_{t \in T} y^{r_i}_{t} + y^{r}_{t}
+          - 0.01 c^v \sum_{t \in T} y^{r_i}_{t} + y^{r}_{t} \\
+          - 0.001 c^v \sum_{t \in T} y^{e}_{t}
           - 0.1 c^v \sum_{l \in L, t \in T} b^{l}_{l, t}
-          - \sum_{t \in T_w \cup T_r, e \in E, b \in B_e} p^{tax}_{t, e, b}
-\end{equation}
+          - \sum_{t \in T, e \in E, b \in B_e} p^{tax}_{t, e, b}
+          - 0.01c^v \sum_{t \in T, e \in E, b \in B_e} z^+_{t, e, b} + z^-_{t, e, b}
+\end{multline}
 
 \subsection{Constraints}
 \begin{align}
@@ -83,14 +91,18 @@
     a^{min}_{l, t} \leq x_{l, t} + A (1 - b^{unpaid}_{l, t+1}) & \qquad \forall l \in L | l \notin RL  , t < t^f \in T_w \\
     a^{min}_{i, t} \leq x_{i, t} & \qquad \forall i \in INV, t \in T_w \\
     v^{0}{i} = v_{i, 0} & \qquad \forall i \in I \\
-    v_{i, t} = v_{i, t-1} (1 + r_{i, t-1})^{n_t} + x_{i, t} \frac{(1 + r_{i, t-1})^{n_t-1}} {r_{i, t-1}} & \qquad \forall i \in I, t \in T_w| t > 0  \\
+    v_{i, t} = v_{i, t-1} (1 + r_{i, t-1})^{n_t} + (x_{i, t} - w_{i, t}) \frac{(1 + r_{i, t-1})^{n_t-1}} {r_{i, t-1}} & \qquad \forall i \in I, t \in T_w| t > 0  \\
     \sum_{i \in I} x_{i, t} + s_t = A & \qquad \forall t \in T_w \\
     v_{l, t} \leq 0 & \qquad \forall l \in L, t \in T_w \\
     y^{l}_{l, t} \geq -v_{l, t} & \qquad \forall t \in T_w| t > t^f_l - 1, l \in L  \\
     b^{debt}_{t} \geq \frac{ \sum_{l \in L} b^{unpaid}_{l, t} } { |L| } & \qquad \forall t \in T_w \\
     \gamma^{lim}_t = \gamma^{min} (1 - b^{debt}_t) + \alpha (\gamma^{max} - \gamma^{min} (1 - b^{debt}_t)) & \qquad \forall t \in T_w \\
     y^{r}_{t} \geq \sum_{i \in I} x_{i, t} v_{i} - A \gamma^{lim}_t & \qquad \forall t \in T_w \\
-    y^{r_i}_{t} \geq \sum_{i \in INV} x_{i, t} v_{i} - \gamma^{lim}_t \sum_{i \in INV} x_{i, t} & \qquad \forall t \in T
+    y^{r_i}_{t} \geq \sum_{i \in INV} x_{i, t} v_{i} - \gamma^{lim}_t \sum_{i \in INV} x_{i, t} & \qquad \forall t \in T \\
+    z^+_{t, e, b} + z_{t, e, b} + z^-_{t, e, b} = s_t - s^{cut}_{e, b} & \qquad \forall t \in T, e \in E, b \in B_e \\
+    z_{t, e, b} \leq m^{ub}_{e, b} & \qquad \forall t \in T, e \in E, b \in B_e \\
+    p^{tax}_{t, e, b} = m^{tax}_{e, b} (m^{ub}_{e, b}- z_{t, e, b}) & \qquad \forall t \in T, e \in E, b \in B_e \\
+    y^{e}_{t} \geq \sum_{i \in INV} w_{i, t} - E & \qquad \forall t \in T_r
 \end{align}
 
 \begin{enumerate}
